# flashcards-rs

./: Cargo.toml  README.md  decks.json
src/: main.rs  stateful_list.rs  ui.rs
src/models/: app_state.rs  deck.rs  flashcard.rs  mod.rs  screen.rs  serialised_models.rs
